Fix loader-wrapper z-index.

--- a/main.scss
+++ b/main.scss
@@ -39,7 +39,7 @@ body {
   top: 0;
   left: 0;
 
-  z-index: 2;
+  z-index: 10;
 
   background-color: $bg-body;
 
